--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Caffeine Villa</title>
+  <title>Caffeine Villa | Homestay in Wayanad</title>
+  <meta name="locale" content="en-IN"><meta name="google" content="notranslate"> 
+  <meta property="og:site_name" content="Caffeine Villa">
+  <meta property="og:locale" content="en_GB">
+  <meta property="og:url" content="https://www.caffeinevilla.in/">
+  <meta property="og:title" content="Homestay in Wayanad">
+  <meta property="og:description" content="Perfect place for solo and group travellers to stay in Wayanad. Camp fire, activities, nature walk and much more at a very affordable price.">
+  <meta property="og:type" content="website">
+  <meta name="description" content="Perfect place for solo and group travellers to stay in Wayanad. Camp fire, activities, nature walk and much more at a very affordable price.">
   <link rel="icon" href="icons/caff-villa.ico">
   <!-- Bootstrap load -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
