--- a/index.html
+++ b/index.html
@@ -1,17 +1,40 @@
+Skip to content
+Search or jump to…
+Pull requests
+Issues
+Marketplace
+Explore
+ 
+@es-d3v 
+es-d3v
+/
+es-d3v.github.io
+Public
+1
+00
+Code
+Issues
+Pull requests
+Actions
+Projects
+Wiki
+Security
+Insights
+Settings
+es-d3v.github.io/index.html
+@es-d3v
+es-d3v Update index.html
+Latest commit d0e2024 on Dec 10, 2020
+ History
+ 1 contributor
+651 lines (547 sloc)  29.4 KB
+   
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
 <head>
   <meta charset="utf-8">
-  <title>Caffeine Villa | Homestay in Wayanad</title>
-  <meta name="locale" content="en-IN"><meta name="google" content="notranslate"> 
-  <meta property="og:site_name" content="Caffeine Villa">
-  <meta property="og:locale" content="en_GB">
-  <meta property="og:url" content="https://www.caffeinevilla.in/">
-  <meta property="og:title" content="Homestay in Wayanad">
-  <meta property="og:description" content="Perfect place for solo and group travellers to stay in Wayanad. Camp fire, activities, nature walk and much more at a very affordable price.">
-  <meta property="og:type" content="website">
-  <meta name="description" content="Perfect place for solo and group travellers to stay in Wayanad. Camp fire, activities, nature walk and much more at a very affordable price.">
+  <title>Caffeine Villa</title>
   <link rel="icon" href="icons/caff-villa.ico">
   <!-- Bootstrap load -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -129,8 +152,8 @@
                 <div class="carousel-item active">
 
                   <div class="row">
-                    <div class="col-md-4">
-                      <div class="card mb-2">
+                   <div class="col-sm d-flex">
+                       <div class="card card-body flex-fill">
                         <img class="card-img-top" src="images/villa-night.jpg" alt="villa night">
                         <div class="card-body">
                           <h4 class="card-title">Perfect for a group</h4>
@@ -139,8 +162,8 @@
                       </div>
                     </div>
 
-                    <div class="col-md-4 clearfix d-none d-md-block">
-                      <div class="card mb-2">
+                    <div class="col-sm d-flex">
+                       <div class="card card-body flex-fill">
                         <img class="card-img-top" src="images/camp-fire.JPG" alt="Card image cap">
                         <div class="card-body">
                           <h4 class="card-title">Camp fire</h4>
@@ -149,8 +172,8 @@
                       </div>
                     </div>
 
-                    <div class="col-md-4 clearfix d-none d-md-block">
-                      <div class="card mb-2">
+                   <div class="col-sm d-flex">
+                       <div class="card card-body flex-fill">
                         <img class="card-img-top" src="images/badminton.jpg" alt="Card image cap">
                         <div class="card-body">
                           <h4 class="card-title">Activities</h4>
@@ -166,8 +189,8 @@
                 <div class="carousel-item">
 
                   <div class="row">
-                    <div class="col-md-4">
-                      <div class="card mb-2">
+                    <div class="col-sm d-flex">
+                       <div class="card card-body flex-fill">
                         <img class="card-img-top" src="images/television.jpg" alt="Card image cap">
                         <div class="card-body">
                           <h4 class="card-title">TV and Wifi</h4>
@@ -176,8 +199,8 @@
                       </div>
                     </div>
 
-                    <div class="col-md-4 clearfix d-none d-md-block">
-                      <div class="card mb-2">
+                    <div class="col-sm d-flex">
+                       <div class="card card-body flex-fill">
                         <img class="card-img-top" src="images/mercedes.jpg" alt="Card image cap">
                         <div class="card-body">
                           <h4 class="card-title">Luxury parking</h4>
@@ -186,8 +209,8 @@
                       </div>
                     </div>
 
-                    <div class="col-md-4 clearfix d-none d-md-block">
-                      <div class="card mb-2">
+                    <div class="col-sm d-flex">
+                       <div class="card card-body flex-fill">
                         <img class="card-img-top" src="images/electricity.jpg" alt="Card image cap">
                         <div class="card-body">
                           <h4 class="card-title">24 X 7</h4>
@@ -203,8 +226,8 @@
                 <div class="carousel-item">
 
                   <div class="row">
-                    <div class="col-md-4">
-                      <div class="card mb-2">
+                    <div class="col-sm d-flex">
+                       <div class="card card-body flex-fill">
                         <img class="card-img-top" src="images/curry.jpg" alt="Card image cap">
                         <div class="card-body">
                           <h4 class="card-title">Mom made food</h4>
@@ -213,8 +236,8 @@
                       </div>
                     </div>
 
-                    <div class="col-md-4 clearfix d-none d-md-block">
-                      <div class="card mb-2">
+                    <div class="col-sm d-flex">
+                       <div class="card card-body flex-fill">
                         <img class="card-img-top" src="images/coffee-estate.jpg" alt="Card image cap">
                         <div class="card-body">
                           <h4 class="card-title">Amidst the coffee aroma</h4>
@@ -223,8 +246,8 @@
                       </div>
                     </div>
 
-                    <div class="col-md-4 clearfix d-none d-md-block">
-                      <div class="card mb-2">
+                    <div class="col-sm d-flex">
+                       <div class="card card-body flex-fill">
                         <img class="card-img-top" src="images/help.jpg" alt="Card image cap">
                         <div class="card-body">
                           <h4 class="card-title">Always at your service</h4>
@@ -463,10 +486,9 @@
 
                 <!--First slide-->
                 <div class="carousel-item active">
-
                   <div class="row">
-                    <div class="col-md-4">
-                      <div class="card mb-2">
+                    <div class="col-sm d-flex">
+                      <div class="card card-body flex-fill">
                         <img class="card-img-top" src="images/karappuzha.jpg" alt="villa night">
                         <div class="card-body">
                           <h4 class="card-title">Karappuzha Dam</h4>
@@ -476,8 +498,8 @@
                       </div>
                     </div>
 
-                    <div class="col-md-4 clearfix d-none d-md-block">
-                      <div class="card mb-2">
+                    <div class="col-sm d-flex">
+                      <div class="card card-body flex-fill">
                         <img class="card-img-top" src="images/kuruva.jpg" alt="Card image cap">
                         <div class="card-body">
                           <h4 class="card-title">Kuruva Island</h4>
@@ -487,11 +509,11 @@
                       </div>
                     </div>
 
-                    <div class="col-md-4 clearfix d-none d-md-block">
-                      <div class="card mb-2">
+                    <div class="col-sm d-flex">
+                      <div class="card card-body flex-fill">
                         <img class="card-img-top" src="images/bandipur.jpg" alt="Card image cap">
                         <div class="card-body">
-                          <h4 class="card-title">Bandipur</h4>
+                          <h4 class="card-title">Bandipur Park</h4>
                           <p class="card-text">Bandipur National Park is regarded as one of the most beautiful and the better-managed national parks of India. Located amidst the picturesque surroundings of the towering Western Ghat Mountains having
                             the second most tiger population in India. 30kms from Caffeine Villa, but worth the distance.</p>
                         </div>
@@ -506,8 +528,8 @@
                 <div class="carousel-item">
 
                   <div class="row">
-                    <div class="col-md-4">
-                      <div class="card mb-2">
+                   <div class="col-sm d-flex">
+                      <div class="card card-body flex-fill">
                         <img class="card-img-top" src="images/pookot.jpg" alt="Card image cap">
                         <div class="card-body">
                           <h4 class="card-title">Pookot Lake</h4>
@@ -519,8 +541,8 @@
                       </div>
                     </div>
 
-                    <div class="col-md-4 clearfix d-none d-md-block">
-                      <div class="card mb-2">
+                   <div class="col-sm d-flex">
+                      <div class="card card-body flex-fill">
                         <img class="card-img-top" src="images/meenmutty.jpg" alt="Card image cap">
                         <div class="card-body">
                           <h4 class="card-title">Meenmutty Falls</h4>
@@ -530,8 +552,8 @@
                       </div>
                     </div>
 
-                    <div class="col-md-4 clearfix d-none d-md-block">
-                      <div class="card mb-2">
+                   <div class="col-sm d-flex">
+                      <div class="card card-body flex-fill">
                         <img class="card-img-top" src="images/edakkal.jpg" alt="Card image cap">
                         <div class="card-body">
                           <h4 class="card-title">Edakkal Caves</h4>
@@ -549,8 +571,8 @@
                 <div class="carousel-item">
 
                   <div class="row">
-                    <div class="col-md-4">
-                      <div class="card mb-2">
+                    <div class="col-sm d-flex">
+                      <div class="card card-body flex-fill">
                         <img class="card-img-top" src="images/jaintemple.jpg" alt="Card image cap">
                         <div class="card-body">
                           <h4 class="card-title">Ancient Jain Temple</h4>
@@ -560,8 +582,8 @@
                       </div>
                     </div>
 
-                    <div class="col-md-4 clearfix d-none d-md-block">
-                      <div class="card mb-2">
+                  <div class="col-sm d-flex">
+                      <div class="card card-body flex-fill">
                         <img class="card-img-top" src="images/banasura.jpg" alt="Card image cap">
                         <div class="card-body">
                           <h4 class="card-title">Banasura Sagar Dam</h4>
@@ -570,9 +592,8 @@
                         </div>
                       </div>
                     </div>
-
-                    <div class="col-md-4 clearfix d-none d-md-block">
-                      <div class="card mb-2">
+                    <div class="col-sm d-flex">
+                      <div class="card card-body flex-fill">
                         <img class="card-img-top" src="images/heritage.jpg" alt="Card image cap">
                         <div class="card-body">
                           <h4 class="card-title">Heritage Museum</h4>
@@ -588,7 +609,7 @@
 
               </div>
               <!--/.Slides-->
-
+            
             </div>
             <!--/.Carousel Wrapper-->
 
@@ -631,11 +652,11 @@
       </div>
       <div class="row">
         <div class="col md-4 contact-icons">
-          <i class="fas fa-phone-volume fa-4x"></i>
+          <a href="tel:+91 9108121723"><i class="fas fa-phone-volume fa-4x"></i></a>
           <p class="contact-body">Call us at +91 9108121723. We are also available on Whatsapp.</p>
         </div>
         <div class="col md-4 contact-icons">
-          <i class="fas fa-envelope fa-4x"></i>
+          <a href="mailto:caffeinevilla@gmail.com"><i class="fas fa-envelope fa-4x"></i></a>
           <p class="contact-body">Mail us at caffeinevilla@gmail.com</p>
         </div>
         <div class="col md-4 contact-icons">
@@ -650,13 +671,25 @@
   <!-- contact ends -->
   <footer>
     <p>
+      <a href="https://api.whatsapp.com/send?phone=919108121723" target="_blank"><i class="fab fa-whatsapp footer-icons"></i></a>
       <a href="https://www.facebook.com/caffeinevilla/" target="_blank"><i class="fab fa-facebook-f footer-icons"></i></a>
       <a href="https://instagram.com/caffeine_villa?igshid=ze7vu73g3e0" target="_blank"><i class="fab fa-instagram footer-icons"></i></a>
-
-
     </p>
     <p>© Copyright 2020 CaffeineVilla</p>
   </footer>
 </body>
 
 </html>
+© 2021 GitHub, Inc.
+Terms
+Privacy
+Security
+Status
+Docs
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
+Loading complete
